--- a/MVC_Viajes/MVC_Viajes.csproj
+++ b/MVC_Viajes/MVC_Viajes.csproj
@@ -6,6 +6,13 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Views\Viajero\**" />
+    <Content Remove="Views\Viajero\**" />
+    <EmbeddedResource Remove="Views\Viajero\**" />
+    <None Remove="Views\Viajero\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -29,6 +36,12 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Views\Asociaciones\" />
+    <Folder Include="Views\Viajes\" />
   </ItemGroup>
 
 </Project>
